[gd_scene load_steps=9 format=3 uid="uid://35ktida5n6y5"]

[ext_resource type="FontFile" uid="uid://rmkjlvce4dyv" path="res://shared/fonts/MPLUSCodeLatin-Bold.ttf" id="1_ff7lw"]
[ext_resource type="Script" path="res://scenes/ui/scripts/show_leaderboard.gd" id="1_p2vo4"]

[sub_resource type="Gradient" id="Gradient_e174d"]
offsets = PackedFloat32Array(0, 0.986486)
colors = PackedColorArray(0.128906, 0.128906, 0.128906, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ijnhe"]
gradient = SubResource("Gradient_e174d")
width = 1280
height = 720
fill_to = Vector2(1, 1)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0dj6w"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.392157, 0.392157, 0.392157, 0.6)
shadow_size = 1
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqs6f"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)
shadow_color = Color(0.321569, 0.321569, 0.321569, 0.6)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n4im"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="Theme" id="Theme_ki05x"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_2n4im")

[node name="leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p2vo4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ijnhe")
expand_mode = 3
stretch_mode = 5

[node name="OuterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 125
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 125

[node name="VBoxContainer" type="VBoxContainer" parent="OuterMarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="OuterMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ff7lw")
theme_override_font_sizes/font_size = 126
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelMarginContainer" type="MarginContainer" parent="OuterMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 500
theme_override_constants/margin_right = 500

[node name="ContentPanelContainer" type="PanelContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0dj6w")

[node name="VBoxContainer" type="VBoxContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.12

[node name="MarginContainer" type="MarginContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = -70

[node name="Label" type="Label" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/TopContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.360784, 0.360784, 0.360784, 1)
theme_override_font_sizes/font_size = 40
text = "Top"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = -70

[node name="Label2" type="Label" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/TopContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.360784, 0.360784, 0.360784, 1)
theme_override_font_sizes/font_size = 40
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListContainer" type="MarginContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="PanelContainer" type="PanelContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/ListContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iqs6f")

[node name="HBoxContainer" type="HBoxContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/ListContainer/PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_ki05x")

[node name="TopList" type="VBoxContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/ListContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreList" type="VBoxContainer" parent="OuterMarginContainer/VBoxContainer/PanelMarginContainer/ContentPanelContainer/VBoxContainer/ListContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
